tests/react_no_jsx_intrinsics/react_no_jsx_intrinsics.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot resolve name `React$Element`.

   5| <div />;
      ^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot resolve name `React$Key`.

   5| <div />;
      ^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot resolve name `React$Ref`.

   5| <div />;
      ^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:2

Cannot resolve name `$JSXIntrinsics`.

   5| <div />;
       ^^^



Found 4 errors
